# icloud-for-linux

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README.md  icloud-for-linux.cpp  icloud-for-linux.launcher  icloud-for-linux.pro  icloud-for-linux.qml  icloud-for-linux.spec  main.js  package.json  snapcraft.yaml  unofficial-office.launcher  unofficial-office.qml  unofficial-webapp-office.launcher  unofficial-webapp-office.qml
.github/workflows/: build_and_test.yml  main.yml  snapcraft-edge.yml  snapcraft.yml
flatpak/: README.md  io.github.crossplatform.icloud-for-linux.metainfo.xml  io.github.crossplatform.icloud-for-linux.yml
share/QtProject/QtQmlViewer/QtWebEngine/Default/Local Storage/: https_www.icloud.com_0.localstorage
snap/: snapcraft.yaml
snap/gui/: calendar.desktop  contacts.desktop  drive.desktop  excel.desktop  find-devices.desktop  find-my-friends.desktop  find-my-iphone.desktop  find.desktop  icloud-for-linux.desktop  keynote.desktop  mail.desktop  notes.desktop  numbers.desktop  onedrive.desktop  onenote.desktop  outlook.desktop  pages.desktop  photos.desktop  powerpoint.desktop  reminders.desktop  word.desktop
src/: icloud-for-linux.cpp  icloud-for-linux.qml  icloud-for-linux.qrc  main.cpp
